<resources>
    <string name="app_name">DreamApplication</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on PallviDreamProject Minimalist Interface.</string>
    <string name="sign_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
</resources>